# comet-1.0

./: CMakeLists.txt  LICENSE  Quick_Start.txt  README.md
ATTIC/: Makefile  make.sh  run.sh  run2.sh
ATTIC/czek_prototype/: Makefile  czek  czek.c  czek.h  main.c  make.sh  run.sh  run2.sh  test.input.txt
ATTIC/czek_prototype/scripts/: glen.pl  prec.pl  twofile.pl
doc/: Quick_Start.txt  code_levelization.txt  overview.txt
driver/: driver.cc  driver.hh  genomics_metric.cc  input_output.cc  input_output.hh  test_problems.cc  test_problems.hh
magma_patch/: .gitignore  README.md  clone_magma.sh  create_modified_magmas.sh  infer_patch.sh  magma_mgemm2.patch  magma_mgemm3.patch  magma_mgemm4.patch  magma_mgemm5.patch  magma_minproduct.patch  make.inc.summit  make.inc.titan  make_magma.sh  patch_magma.sh
scripts/: README.md  cmake.sh  configure_all.sh  format_source.sh  make.sh  make_all.sh  scaling_weak_summit_2way.sh  test_all.sh
src/: assertions.cc  assertions.hh  checksum.cc  checksum.hh  comm_xfer_utils.cc  comm_xfer_utils.hh  compute_metrics.cc  compute_metrics.hh  compute_metrics_2way.cc  compute_metrics_2way.hh  compute_metrics_2way_block_combine.cc  compute_metrics_2way_block_combine.hh  compute_metrics_2way_block_nums.cc  compute_metrics_2way_block_nums.hh  compute_metrics_3way.cc  compute_metrics_3way.hh  compute_metrics_3way_block.cc  compute_metrics_3way_block.hh  compute_metrics_3way_block_gpu.cc  compute_metrics_3way_block_gpu.hh  compute_metrics_3way_block_nongpu.cc  compute_metrics_3way_block_nongpu.hh  decomp_mgr.cc  decomp_mgr.hh  env.cc  env.hh  linalg.cc  linalg.hh  linalg_accel.cc  linalg_accel.hh  metrics.cc  metrics.hh  metrics_2way_accessors.hh  metrics_2way_indexing.hh  metrics_3way_accessors.hh  metrics_3way_indexing.hh  mirrored_buf.cc  mirrored_buf.hh  types.hh  vector_sums.cc  (+3 more)
testing/: driver_test.cc  metrics_test.cc
tools/: CoMet_Settings_Tool.xlsx  README.txt  allele_labels.sh  ccc_validate.c  ccc_validate_all.sh  install.sh  labels.sh  line_indices.c  make.sh  postprocess_all.sh  postprocess_file.c  preprocess.c  preprocess_validate.c  settings_advisor  settings_advisor_test.sh  validate_all.sh
tpls/: README.md
